snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210906.104450-1-sources.jar.sha256
4c8c12d912e222409183787eb8f3296813487f2d45147d2da4192e0f8f9df999